--- a/ApexIntegrator1/ApexServices/app.config
+++ b/ApexIntegrator1/ApexServices/app.config
@@ -1,31 +1,111 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="BasicHttpBinding_ILoginService" />
-                <binding name="BasicHttpBinding_IQueryService" />
-                <binding name="BasicHttpBinding_IRoutingService" />
-                <binding name="BasicHttpBinding_IAdministrationService" />
-                <binding name="BasicHttpBinding_IMappingService" />
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://rn-pd-teamcity3.roadnet.local/3.9.22.1/Login/LoginService.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILoginService"
-                contract="Apex.ILoginService" name="BasicHttpBinding_ILoginService" />
-            <endpoint address="http://rn-pd-teamcity3.roadnet.local/3.9.22.1/Query/QueryService.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IQueryService"
-                contract="Apex.IQueryService" name="BasicHttpBinding_IQueryService" />
-            <endpoint address="http://rn-pd-teamcity3.roadnet.local/3.9.22.1/Routing/RoutingService.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IRoutingService"
-                contract="Apex.IRoutingService" name="BasicHttpBinding_IRoutingService" />
-            <endpoint address="http://rn-pd-teamcity3.roadnet.local/3.9.22.1/Administration/AdministrationService.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IAdministrationService"
-                contract="Apex.IAdministrationService" name="BasicHttpBinding_IAdministrationService" />
-            <endpoint address="http://rn-pd-teamcity3.roadnet.local/3.9.22.1/Mapping/MappingService.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IMappingService"
-                contract="Apex.IMappingService" name="BasicHttpBinding_IMappingService" />
-        </client>
-    </system.serviceModel>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_ILoginService"
+                 maxBufferPoolSize="17179869176"
+                 maxBufferSize="2147483647"
+                 maxReceivedMessageSize="2147483647"
+                 closeTimeout="00:05:00"
+                 openTimeout="00:05:00"
+                 receiveTimeout="00:05:00"
+                 sendTimeout="00:05:00" >
+          <readerQuotas maxDepth="32"
+                        maxStringContentLength="268435456"
+                        maxArrayLength="536870912"
+                        maxBytesPerRead="134217728"
+                        maxNameTableCharCount="536870912" />
+          <security mode="Transport" />
+        </binding>
+        <binding name="BasicHttpBinding_IQueryService"
+                 maxBufferPoolSize="17179869176"
+                 maxBufferSize="2147483647"
+                 maxReceivedMessageSize="2147483647"
+                 closeTimeout="00:05:00"
+                 openTimeout="00:05:00"
+                 receiveTimeout="00:05:00"
+                 sendTimeout="00:05:00" >
+          <readerQuotas maxDepth="32"
+                        maxStringContentLength="268435456"
+                        maxArrayLength="536870912"
+                        maxBytesPerRead="134217728"
+                        maxNameTableCharCount="536870912" />
+          <security mode="Transport" />
+        </binding>
+        <binding name="BasicHttpBinding_IRoutingService"
+                 maxBufferPoolSize="17179869176"
+                 maxBufferSize="2147483647"
+                 maxReceivedMessageSize="2147483647"
+                 closeTimeout="00:05:00"
+                 openTimeout="00:05:00"
+                 receiveTimeout="00:05:00"
+                 sendTimeout="00:05:00" >
+          <readerQuotas maxDepth="32"
+                        maxStringContentLength="268435456"
+                        maxArrayLength="536870912"
+                        maxBytesPerRead="134217728"
+                        maxNameTableCharCount="536870912" />
+          <security mode="Transport" />
+        </binding>
+        <binding name="BasicHttpBinding_IAdministrationService"
+                 maxBufferPoolSize="17179869176"
+                 maxBufferSize="2147483647"
+                 maxReceivedMessageSize="2147483647"
+                 closeTimeout="00:05:00"
+                 openTimeout="00:05:00"
+                 receiveTimeout="00:05:00"
+                 sendTimeout="00:05:00" >
+          <readerQuotas maxDepth="32"
+                        maxStringContentLength="268435456"
+                        maxArrayLength="536870912"
+                        maxBytesPerRead="134217728"
+                        maxNameTableCharCount="536870912" />
+          <security mode="Transport" />
+        </binding>
+        <binding name="BasicHttpBinding_IMappingService"
+                 maxBufferPoolSize="17179869176"
+                 maxBufferSize="2147483647"
+                 maxReceivedMessageSize="2147483647"
+                 closeTimeout="00:05:00"
+                 openTimeout="00:05:00"
+                 receiveTimeout="00:05:00"
+                 sendTimeout="00:05:00" >
+          <readerQuotas maxDepth="32"
+                        maxStringContentLength="268435456"
+                        maxArrayLength="536870912"
+                        maxBytesPerRead="134217728"
+                        maxNameTableCharCount="536870912" />
+          <security mode="Transport" />
+        </binding>
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://apex-cs-login.aws.roadnet.com/Login/LoginService.svc"
+                binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_ILoginService"
+                contract="Apex.ILoginService"
+                name="BasicHttpBinding_ILoginService" />
+      <endpoint address="https://apex-cs-login.aws.roadnet.com/Query/QueryService.svc"
+                binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IQueryService"
+                contract="Apex.IQueryService"
+                name="BasicHttpBinding_IQueryService" />
+      <endpoint address="https://apex-cs-login.aws.roadnet.com/Routing/RoutingService.svc"
+                binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IRoutingService"
+                contract="Apex.IRoutingService"
+                name="BasicHttpBinding_IRoutingService" />
+      <endpoint address="https://apex-cs-login.aws.roadnet.com/Administration/AdministrationService.svc"
+                binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IAdministrationService"
+                contract="Apex.IAdministrationService"
+                name="BasicHttpBinding_IAdministrationService" />
+      <endpoint address="https://apex-cs-login.aws.roadnet.com/Mapping/MappingService.svc"
+                binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IMappingService"
+                contract="Apex.IMappingService"
+                name="BasicHttpBinding_IMappingService" />
+    </client>
+  </system.serviceModel>
 </configuration>
