--- a/ApexIntegrator1/ApexServices/ApexServices.csproj
+++ b/ApexIntegrator1/ApexServices/ApexServices.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="LoginService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\Apex\Reference.cs">
       <AutoGen>True</AutoGen>
