Login/Connection Cleanup and Initial Geocode

--- a/ApexIntegrator1/ApexServicesTest/ApexServicesTest.csproj
+++ b/ApexIntegrator1/ApexServicesTest/ApexServicesTest.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,7 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LoginTest.cs" />
+    <Compile Include="GeocodeTest.cs" />
+    <Compile Include="ConnectionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
