--- a/ApexIntegrator1/ApexServices/ApexServices.csproj
+++ b/ApexIntegrator1/ApexServices/ApexServices.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connection.cs" />
+    <Compile Include="GeocodeService.cs" />
     <Compile Include="LoginService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\Apex\Reference.cs">
