--- a/ApexIntegrator1/ApexIntegrator1/packages.config
+++ b/ApexIntegrator1/ApexIntegrator1/packages.config
@@ -15,5 +15,15 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="RxJS-Aggregates" version="4.0.7" targetFramework="net452" />
+  <package id="RxJS-All" version="4.0.7" targetFramework="net452" />
+  <package id="RxJS-Binding" version="4.0.7" targetFramework="net452" />
+  <package id="RxJS-Coincidence" version="4.0.7" targetFramework="net452" />
+  <package id="RxJS-Experimental" version="4.0.7" targetFramework="net452" />
+  <package id="RxJS-JoinPatterns" version="4.0.7" targetFramework="net452" />
+  <package id="RxJS-Main" version="4.0.7" targetFramework="net452" />
+  <package id="RxJS-Testing" version="4.0.7" targetFramework="net452" />
+  <package id="RxJS-Time" version="4.0.7" targetFramework="net452" />
+  <package id="RxJS-VirtualTime" version="4.0.7" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
