--- a/ApexIntegrator1/ApexServices/ApexServices.csproj
+++ b/ApexIntegrator1/ApexServices/ApexServices.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Connection.cs" />
     <Compile Include="GeocodeService.cs" />
     <Compile Include="LoginService.cs" />
+    <Compile Include="OrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\Apex\Reference.cs">
       <AutoGen>True</AutoGen>
