--- a/ApexIntegrator1/ApexServices/ApexServices.csproj
+++ b/ApexIntegrator1/ApexServices/ApexServices.csproj
@@ -43,7 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Connection.cs" />
+    <Compile Include="DefaultEntities.cs" />
     <Compile Include="GeocodeService.cs" />
+    <Compile Include="LocationService.cs" />
     <Compile Include="LoginService.cs" />
     <Compile Include="OrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
