--- a/ApexIntegrator1/ApexServicesTest/ApexServicesTest.csproj
+++ b/ApexIntegrator1/ApexServicesTest/ApexServicesTest.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DefaultEntitiesTests.cs" />
     <Compile Include="LocationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SessionTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
