--- a/ApexIntegrator1/ApexServices/ApexServices.csproj
+++ b/ApexIntegrator1/ApexServices/ApexServices.csproj
@@ -44,9 +44,12 @@
   <ItemGroup>
     <Compile Include="Connection.cs" />
     <Compile Include="DefaultEntities.cs" />
+    <Compile Include="GeocodeInfo.cs" />
     <Compile Include="GeocodeService.cs" />
+    <Compile Include="LocationInfo.cs" />
     <Compile Include="LocationService.cs" />
     <Compile Include="LoginService.cs" />
+    <Compile Include="OrderInfo.cs" />
     <Compile Include="OrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\Apex\Reference.cs">
